Fri Aug 20 09:56:47 1993  Linus Tolke Y  (linus@dell)

	* lyskom-rest.el (kom-extended-command): Remove functions from the
	  completing possibility if they are not interesting according to
	  whether I am administrator or not.

Wed Aug 18 17:10:18 1993  Linus Tolke Y  (linus@bodil)

	* lyskom-rest.el (lyskom-read-string): No longer does
	  lyskom-end-of-command when quit is typed.
	* commands1.el, commands2.el, startup.el, lyskom-rest.el
	  (lyskom-j-or-n-p, lyskom-ja-or-nej-p): New functions.

Mon Aug 16 18:36:59 1993  Linus Tolke Y  (linus@rune)

	* lyskom-rest.el, swedish-strings.el (kom-extended-command):
	  Previous change undone.

	* vars.el, swedish-string.el, lyskom-rest.el (kom-tell-phrases):
	  substituted kom-tell-phrases-internal for
	  lyskom-tell-phrases-validation-keyword-list and moved back all
	  language dependent information from vars.el to swedish-strings.el

Fri Aug 13 20:28:11 1993  Linus Tolke Y  (linus@rune)

	* commands1.el (kom-write-letter): Use blocking-do.

	* lyskom-rest.el, swedish-strings.el (kom-extended-command):
	  Maps swedish letters from different isostandards to the same
	  chars.

Wed Aug 11 11:39:44 1993  Linus Tolke Y  (linus@rudolf)

	* commands2.el (kom-send-message): Allowed quitting.
	* commands1.el (lyskom-write-comment): No blocking of edit-queue,
	  corrected misspelled blocking-do.

Mon Aug  9 13:29:37 1993  Linus Tolke Y  (linus@rune)

	* commands1.el (kom-send-letter): Now allowed to quit.

Wed Jul 28 20:18:24 1993  Linus Tolke Y  (linus@varg)

	* commands1.el, command2.el, completing-read.el, edit-text.el:
	  Some functions rewritten to use the blocking-do construct.

	* startup.el (lyskom-start-anew-create-handler): No presentation
	  offer.
	* services.el (blocking-do): New functions.

Fri Jul 23 09:01:58 1993  Linus Tolke Y  (linus@bodil)

        * swedish-strings.el, commands2.el (kom-bug-report,
	  kom-compile-bug-report): kom-compile-bug-report is now
	  called kom-bug-report. The texts are changed.
